<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".CameraActivity">

    <Button
        android:id="@+id/btnTakePic"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/takePic"/>

    <Button
        android:id="@+id/btnTakeVid"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/takeVideo"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/cancel"/>

  </LinearLayout>